force-app/main/default/objects/sked_Drive_Change_Request__c/sked_Drive_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Drive Change Request</label>
    <nameField>
        <displayFormat>DCR-{000000}</displayFormat>
        <label>Drive Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>