force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>