force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Drive_Contention__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Contention__c</fullName>
    <label>Drive Contention</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Drive_Contention</valueSetName>
    </valueSet>
</CustomField>