force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Last_Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>sked_Last_Processing_Result__c</fullName>
    <label>Last Processing Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>