force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_New_Territory_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_New_Territory_Key__c</fullName>
    <formula>CASESAFEID(sked_New_District__c) + &#39;:&#39; + CASESAFEID(sked_New_Collection_Operation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Territory Key</label>
    <type>Text</type>
</CustomField>