force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>