force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sked_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Drive Change Requests</relationshipLabel>
    <relationshipName>sked_Drive_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>