force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(sked_Drive__r.sked_Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>