force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Initiated</fullName>
            </value>
            <value>
                <fullName>ARC Management Initiated</fullName>
            </value>
            <value>
                <fullName>ARC Recruitment Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>