force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting for DM Approval</fullName>
            </value>
            <value>
                <fullName>DM Waiting for DRD Feedback</fullName>
            </value>
            <value>
                <fullName>Waiting for APS Approval</fullName>
            </value>
            <value>
                <fullName>APS Waiting for DRD Feedback</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approved by System</fullName>
            </value>
            <value>
                <fullName>Waiting for DRD Feedback</fullName>
                <isActive>false</isActive>
                <label>Waiting for DRD Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>