force-app/main/default/objects/sked_Drive_Change_Request__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Change</fullName>
                <default>true</default>
                <label>User Change</label>
            </value>
            <value>
                <fullName>Collection Operation Change</fullName>
            </value>
            <value>
                <fullName>Role Time Detail Change</fullName>
            </value>
            <value>
                <fullName>Role Time Variance Change</fullName>
            </value>
            <value>
                <fullName>Site Address Change</fullName>
            </value>
            <value>
                <fullName>Travel Time Change</fullName>
            </value>
            <value>
                <fullName>Regenerate Drive</fullName>
            </value>
            <value>
                <fullName>Slot Configuration Change</fullName>
            </value>
            <value>
                <fullName>Vehicle Requirement Change</fullName>
            </value>
            <value>
                <fullName>SDM Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>