force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/ABC_Collection_Operation_DMDCR_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>ABC_Collection_Operation_DMDCR_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>ABC Collection Operation: DMDCR</label>
    <queue>ABC_Collection_Operation_DMDCR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>