force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Adrian_MI_DMDCR1_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Adrian_MI_DMDCR1_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Adrian MI: DMDCR</label>
    <queue>Adrian_MI_DMDCR1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>