force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Alameda_CA_DMDCR1_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Alameda_CA_DMDCR1_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Alameda CA: DMDCR</label>
    <queue>Alameda_CA_DMDCR1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>