force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Albany_NY_DMDCR_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Albany_NY_DMDCR_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Albany NY: DMDCR</label>
    <queue>Albany_NY_DMDCR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>