force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Type__c</columns>
    <columns>sked_Sub_reason__c</columns>
    <columns>sked_Submitted_By__c</columns>
    <columns>sked_Description__c</columns>
    <columns>sked_Drive__c</columns>
    <columns>sked_Opportunity__c</columns>
    <columns>sked_Reason__c</columns>
    <columns>sked_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/27/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>sked_Type__c</field>
        <operation>equals</operation>
        <value>Travel Time Change</value>
    </filters>
    <label>All</label>
</ListView>