force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Altoona_PA_DMDCR1_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Altoona_PA_DMDCR1_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Altoona PA: DMDCR</label>
    <queue>Altoona_PA_DMDCR1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>