force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Arlington_TX_DMDCR1_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Arlington_TX_DMDCR1_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Arlington TX: DMDCR</label>
    <queue>Arlington_TX_DMDCR1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>