force-app/main/default/objects/sked_Drive_Change_Request__c/listViews/Asheville_NC_DCRs1_sked_Drive_Change_Request.listView-meta.xml
<ListView>
    <fullName>Asheville_NC_DCRs1_sked_Drive_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Asheville NC: DCRs</label>
    <queue>Asheville_NC_DCRs1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>